# overtime_accounting

./: Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 3c994e489861_delete_role_users.py  c059f37c72ab_create_table.py  d8ebef8b951d_create_table.py
app/: __main__.py  config.py  main.py
app/core/: base.py  db_halper.py
app/core/models/: __init__.py  tasks.py  users.py
app/core/service/: auth_service.py  tasks_service.py
app/routers/: auth.py  tasks.py
app/routers/auth/: auth_router.py  auth_schemas.py  dependence.py  logout.py  security.py
app/routers/schemas/: auth_schemas.py
app/routers/tasks/: tasks_router.py  tasks_schemas.py
app/static/js/: scripts.js
app/templates/: base.html  create-task.html  home.html  index.html  login.html  navbar.html  register.html
app/utils/: assistants_auth.py
test/: conftest.py
